# rmqtt-things

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  README_zh.md  changes-preview.html  changes-summary.md
backend/: Cargo.toml  config.demo.toml  config.example.toml  openapi.json
backend/.config/: nextest.toml
backend/migrations/: 20251020002700_init.sql  20251020002800_fix_ota_versions_unique_idx.sql  20260519000001_add_alarm_rule.sql  20260519000002_add_devices.sql  20260603000001_add_alarm_rule_check.sql  20260606000001_add_alarm_webhook_retry.sql  20260614000001_add_alarm_status_check.sql  20260709000001_add_property_desired.sql  20260718000001_add_factory_metadata.sql
backend/src/: cache.rs  config.rs  main.rs  rmqtt_client.rs  telemetry.rs
backend/src/api/: admin_handlers.rs  admin_models.rs  alarm_handlers.rs  alarm_models.rs  auth_handlers.rs  ca_handlers.rs  error.rs  factory_handlers.rs  factory_middleware.rs  handlers.rs  mod.rs  openapi.rs  ota_handlers.rs  product_handlers.rs  shadow.rs  utils.rs  web_models.rs
backend/src/api/middleware/: mod.rs
backend/src/api/tests/: alarm_api_extended_scenarios.rs  alarm_duration_scenarios.rs  alarm_lifecycle_scenarios.rs  alarm_record_api_scenarios.rs  alarm_rule_crud_scenarios.rs  cert_scenarios.rs  device_auto_provisioning_scenarios.rs  factory_metadata_scenarios.rs  file_download_url_scenarios.rs  herald_auth_scenarios.rs  mod.rs  mqtt_device_flow_scenarios.rs  mqtt_integration.rs  mqtt_test_context.rs  ota_tests.rs  product_tests.rs  s3_tests.rs  (+5 more)
backend/src/ca/: generator.rs  mod.rs
backend/src/db/: alarm.rs  cert_issue.rs  database.rs  device.rs  factory_metadata.rs  mod.rs  models.rs  ota.rs  product.rs
backend/src/rule_engine/: actions.rs  cache.rs  evaluator.rs  mod.rs
(+290 files in other folders)
