[package]
name = "rmqtt-things"
version = "0.2.1"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["query"] }
tower-http = { version = "0.6", features = ["fs", "trace", "request-id"] }
tower = { version = "0.5", features = ["util"] }
utoipa = { version = "5.4", features = ["uuid", "time"] }
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1"

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json", "uuid", "time"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

opentelemetry_sdk = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
opentelemetry-appender-tracing = "0.31"
opentelemetry = { version = "0.31"}

base64 = "0.22"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
rand = "0.9"
hmac = "0.12"
sha1 = "0.10"
hex = "0.4"
jsonschema = "0.33"
dashmap = "6.1"
redis = { version = "0.32", features = ["tokio-comp", "json"] }
rust-s3 = "0.37"
time = { version = "0.3.36", features = ["serde-well-known", "macros", "serde"] }
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }


[dev-dependencies]
test-context = "0.4"
tempfile = "3"
rumqttc = "0.25.1"
serial_test = { version = "3", features = ["file_locks"] }

